k8s/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend-deployment
  namespace: demo-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-app
          imagePullPolicy: Always
          image: ghcr.io/tom333/demo_flask_k8s:main
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
