k8s/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-flask-backend
  namespace: demo_flask
spec:
  type: NodePort
  selector:
    app: flask-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: tcp-5000
