k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
  namespace: demo_flask
  labels:
    name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: database
