k8s/flask_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: demo-flask
spec:
  rules:
  - host: todolist.matrix
    http:
      paths:
      - path:
        backend:
          serviceName: service-flask-backend
          servicePort: 5000
